WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100662
[EFL][WK2] Fix cursor change detection in EwkViewImpl::setCursor()
https://bugs.webkit.org/show_bug.cgi?id=100662
Summary
[EFL][WK2] Fix cursor change detection in EwkViewImpl::setCursor()
Chris Dumez
Reported
2012-10-29 06:00:15 PDT
cursor change detection in EwkViewImpl::setCursor() is broken and we keep recreating the same cursor.
Attachments
Patch
(2.84 KB, patch)
2012-10-29 06:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-29 06:06:56 PDT
Created
attachment 171218
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-10-29 07:39:02 PDT
Comment on
attachment 171218
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171218&action=review
Is it possible to test this using a unit test?
> Source/WebKit2/ChangeLog:13 > + Cursor change detection in EwkViewImpl::setCursor() relies on > + addresses returned by Cursor::platformCursor(). However, the > + value returned is currently assigned to a WKEinaSharedString > + instead of a raw pointer. Therefore, the address is always > + different and we keep recreating Evas Objects for the same > + cursor.
Yikes :-)
Chris Dumez
Comment 3
2012-10-29 07:45:09 PDT
Comment on
attachment 171218
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=171218&action=review
I thought about unit testing but this is not a public API, this is private implementation.
>> Source/WebKit2/ChangeLog:13 >> + cursor. > > Yikes :-)
Well, it is faster than comparing strings :)
WebKit Review Bot
Comment 4
2012-10-29 07:50:42 PDT
Comment on
attachment 171218
[details]
Patch Clearing flags on attachment: 171218 Committed
r132803
: <
http://trac.webkit.org/changeset/132803
>
WebKit Review Bot
Comment 5
2012-10-29 07:50:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug