[EFL][WK2] Fix cursor change detection in EwkViewImpl::setCursor() https://bugs.webkit.org/show_bug.cgi?id=100662

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-29
Reviewed by Kenneth Rohde Christiansen.

Cursor change detection in EwkViewImpl::setCursor() relies on
addresses returned by Cursor::platformCursor(). However, the
value returned is currently assigned to a WKEinaSharedString
instead of a raw pointer. Therefore, the address is always
different and we keep recreating Evas Objects for the same
cursor.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::EwkViewImpl):
(EwkViewImpl::setCursor): Call smartData() after same cursor
detection since it is not needed if the cursor has not changed
and it may affect performance.
* UIProcess/API/efl/EwkViewImpl.h:
(EwkViewImpl):

Canonical link: https://commits.webkit.org/118706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132803 268f45cc-cd09-0410-ab3c-d52691b4dbfc